@@ -26,13 +26,11 @@
  * @bug 8256266 8281238
  * @summary Verify annotations work correctly on binding variables
  * @library /tools/javac/lib
- * @enablePreview
  * @modules java.compiler
  *          jdk.compiler
- *          java.base/jdk.internal.classfile.impl
  * @build JavacTestingAbstractProcessor
  * @compile Annotations.java
- * @compile -J--enable-preview -processor Annotations -proc:only Annotations.java
+ * @compile -processor Annotations -proc:only Annotations.java
  * @run main Annotations
  */
 
