@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,11 @@
  * @test
  * @bug 8072480 8277106 8331027
  * @summary Unit test for CreateSymbols
- * @enablePreview
  * @modules java.compiler
  *          jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.jvm
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
  * @clean *
  * @run main/othervm CreateSymbolsTest
  */
@@ -102,17 +100,13 @@ public class CreateSymbolsTest {
                                       null,
                                       List.of("-d",
                                               compileDir.toAbsolutePath().toString(),
-                                              "--enable-preview",
-                                              "--source",
-                                              "" + System.getProperty("java.specification.version"),
                                               "-g",
                                               "--add-modules", "jdk.jdeps",
                                               "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                                               "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                                               "--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
                                               "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                                              "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                                              "--add-exports", "jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED"),
+                                              "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"),
                                       null,
                                       fm.getJavaFileObjectsFromPaths(files)
                                     ).call();
